--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Integration Tests
 
 on:
   push:
@@ -6,11 +6,14 @@ on:
       - master
       - develop
   pull_request:
-
+    branches:
+      - master
 jobs:
   build:
     name: Test
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TESTBOT_TOKEN=${{ secrets.TELEGRAM_TESTBOT_TOKEN }}
     steps:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
@@ -25,7 +28,7 @@ jobs:
       run: go build -v .
 
     - name: Test
-      run: go test -coverprofile=coverage.out -covermode=atomic -v .
+      run: go test -coverprofile=coverage.out -covermode=atomic -v tests/.
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v1
