--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -13,7 +13,11 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     env:
-      TELEGRAM_TESTBOT_TOKEN=${{ secrets.TELEGRAM_TESTBOT_TOKEN }}
+      TELEGRAM_TESTBOT_TOKEN: ${{ secrets.TELEGRAM_TESTBOT_TOKEN }}
+      TELEGRAM_CHANNEL: ${{ secrets.TELEGRAM_CHANNEL }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      TELEGRAM_REPLY_TO_MESSAGE_ID: ${{ secrets.TELEGRAM_REPLY_TO_MESSAGE_ID }}
+      TELEGRAM_SUPERGROUP_CHAT_ID: ${{ secrets.TELEGRAM_SUPERGROUP_CHAT_ID }}
     steps:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
